--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 			<br>
 			Curso: DISEÑO DE SITIOS WEB - 301122_4
 		</h3>
+		<button onclick="window.location.href='Fase_2/design.html'">Fase_2</button>
+
 		</section>
 	
 </body>
