--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<br>
 			Curso: DISEÑO DE SITIOS WEB - 301122_4
 		</h3>
-		<button onclick="window.location.href='Fase_2/design.html'">Fase_2</button>
+		<button onclick="window.location.href='Fase3Jorge/index.html'">Fase_3</button>
 
 		</section>
 	
