--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<br>
 			Contacto: 3122200195 
 			<br>
-			Curso: DISEÑO DE SITIOS WEB - 301122_4
+			Curso: DISEÑO DE SITIOS WEB - 301122_4.
 		</h3>
 		<button onclick="window.location.href='Fase4Jorge/index.html'">Fase_4</button>
 
