--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<br>
 			Curso: DISEÑO DE SITIOS WEB - 301122_4
 		</h3>
-		<button onclick="window.location.href='Fase4Jorge/index.html'">Fase_4</button>
+		<button onclick="window.location.href='Fase4jorge/index.html'">Fase_4</button>
 
 		</section>
 	
